# steamCloudSaveDownloader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pack.sh  pyproject.toml  requirements-dev.txt  requirements.txt  scsd  scsd.conf.sample  scsd.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-build-publish.yml  check-test-build.yml  publish.yml
docker/: cron-root  entry.sh  run.sh  scsd_auth
hotfix/: db_time_issue_0_0_78.py
steamCloudSaveDownloader/: __main__.py  args.py  auth.py  config.py  db.py  downloader.py  err.py  logger.py  notifier.py  parser.py  storage.py  stored.py  summary.py  utility.py  ver.py  web.py
tests/: test_args.py  test_config.py  test_db.py  test_notifier.py
