[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "scsd"
version = "0.0.1"
authors = [
  { name="hchsu"}
]
description = "Steam Cloud Save Downloader"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hhhhhojeihsu/steamCloudSaveDownloader"
"Bug Tracker" = "https://github.com/hhhhhojeihsu/steamCloudSaveDownloader/issues"

[project.scripts]
scsd = "steamCloudSaveDownloader.__main__:__main__"
