[build-system]
requires = ['hatchling', 'hatch-requirements-txt']
build-backend = "hatchling.build"

[project]
name = "scsd"
version = "0.0.8"
authors = [
  { name="hchsu"}
]
description = "Steam Cloud Save Downloader"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[project.urls]
"Homepage" = "https://github.com/hhhhhojeihsu/steamCloudSaveDownloader"
"Bug Tracker" = "https://github.com/hhhhhojeihsu/steamCloudSaveDownloader/issues"

[project.scripts]
scsd = "steamCloudSaveDownloader.__main__:__main__"
